# X500-Quadcopter-UAV

./: .gitignore  README.md
src/x500/: CMakeLists.txt  package.xml
src/x500/launch/: spawn_model.launch.py
src/x500_uav/: CMakeLists.txt  package.xml
src/x500_uav/launch/: sim.launch.py
src/x500_uav/worlds/: terrain.sdf  world.sdf
