<?xml version="1.0"?>
<package format="3">
  <name>x500_uav</name>
  <version>0.1.0</version>
  <description>X500 Quadcopter UAV</description>
  <maintainer email="unikmey@gmail.com">Mighty</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
